add basic navigation
- cleanup files

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,11 @@
   <title>BluJay</title>
 </head>
 <body>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+  </ul>
+  <hr>
   <h1>Welcome to BluJay!</h1>
   <p>@message</p>
 </body>
