--- a/app/views/about.scala.html
+++ b/app/views/about.scala.html
@@ -14,6 +14,11 @@
   <title>About Page</title>
 </head>
 <body>
+  <ul>
+    <li><a href="@routes.HomeController.index()">Home</a></li>
+    <li><a href="@routes.HomeController.about()">About</a></li>
+  </ul>
+  <hr>
   <h1>The About Us Page</h1>
   <p>email@@me.com</p>
 </body>
