--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,26 +3,10 @@
  * message to display.
  *@
 
-@* Parameters List *@
-@(message: String)
+ @(message: String)
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Reverse Routing -->
-  <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/style.css")">
-  <title>BluJay</title>
-</head>
-<body>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
-  </ul>
-  <hr>
+@main("Home Page") {
+  @* Content for Home Page*@
   <h1>Welcome to BluJay!</h1>
   <p>@message</p>
-</body>
-</html>
+}
