--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,26 +13,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   @* Reverse Routing *@
-  <link rel="stylesheet" href="@routes.Assets.versioned(" stylesheets/style.css")">
+  <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/main.css")">
   <title>@title</title>
 </head>
 
 <body>
-  <nav class="navbar">
-    <ul> @* Reverse Routing *@
-      <li><a href="@routes.HomeController.index()">Home</a></li>
-      <li><a href="@routes.HomeController.about()">About</a></li>
-      <li><a href="@routes.HomeController.products()">Products</a></li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-dark" aria-label="Ninth navbar example">
+    <div class="container-xl">
+      <a class="navbar-brand" href="@routes.HomeController.index()">BluJay</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07XL"
+        aria-controls="navbarsExample07XL" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample07XL">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="@routes.HomeController.index()">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="@routes.HomeController.about()">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="@routes.HomeController.products()">Products</a>
+          </li>
+        </ul>
+        <form role="search">
+          <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        </form>
+      </div>
+    </div>
   </nav>
+
   <hr>
-  <!-- Content area --> @* Content goes here *@
-  @content
+
+  <section class="container-xl mb-4">
+    <!-- Content area --> @* Content goes here *@
+    @content
+  </section>
+
   <hr>
-  <section id="footer">
+  <section id="footer" class="container-xl mb-4">
     <p>Page footer</p>
   </section>
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
 </html>
