--- a/app/views/products.scala.html
+++ b/app/views/products.scala.html
@@ -1,10 +1,42 @@
 @*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
+* This template takes a single argument, a String containing a
+* message to display.
+*@
+
+@(product: models.Product)
 
 @main("Products") {
-  @* Content for Products Page*@
-  <h1>The Products Page</h1>
-  <p>...products</p>
-}
+<div class="row">
+  <div class="col-md-2">
+    <div class="list-group">
+      <a href="#" class="list-group-item  list-group-item-action">All Categories</a>
+    </div>
+  </div>
+
+  <div class="col-md-auto">
+    <table class="table table-hover table-striped">
+      <thead class="thead-dark">
+        <th scope="col">ID</th>
+        <th scope="col">Name</th>
+        <th scope="col">Category</th>
+        <th scope="col">Description</th>
+        <th scope="col">Stock</th>
+        <th scope="col">Price</th>
+      </thead>
+      <tbody>
+        <tr scope="row">
+          <td>@product.getId</td>
+          <td>@product.getName</td>
+          <td>@product.getCategory</td>
+          <td>@product.getDescription</td>
+          <td>@product.getStock</td>
+          <td>&dollar;@product.getPrice</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr scope="row">
+        </tr>
+      </tfoot>
+    </table>
+  </div>
+  }
