--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -104,8 +104,12 @@
     </footer>
   </section>
 
-  <!-- JavaScript Bundle with Popper -->
+  <!-- script.js-->
+  <script src="@routes.Assets.versioned(" javascripts/script.js")"></script>
+  <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </body>
 
 </html>
